# tokenoptim

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MY_THOUGHTS.md  README.md  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  publish.yml
benchmarks/: run_benchmark.py
examples/: basic_usage.py  full_client_demo.py  spark_batch_demo.py
skills/ancient/: SKILL.md
skills/lite/: SKILL.md
src/tokenoptim/: __init__.py  async_client.py  cli.py  client.py
src/tokenoptim/core/: __init__.py  cache.py  compressor.py  counter.py  memory.py  ml_compressor.py  output_style.py  retry.py
src/tokenoptim/providers/: __init__.py  anthropic.py  anthropic_async.py  base.py  ollama.py  openai.py  openai_async.py
src/tokenoptim/skills/full/: SKILL.md
src/tokenoptim/skills/standard/: SKILL.md
src/tokenoptim/skills/ultra/: SKILL.md
src/tokenoptim/spark/: __init__.py  udf.py
tests/: test_async_client.py  test_cache.py  test_compressor.py  test_memory.py  test_output_style.py  test_retry.py
