[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-tokenoptim"
version = "0.2.1"
description = "Cut LLM token costs by 40-75%. Works as a Claude Code skill, Gemini CLI wrapper, Codex wrapper, or Python SDK. No API key needed."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "venkatamanas raghupatruni", email = "venkatamanasraghupatruni@gmail.com" }]
keywords = [
    "llm", "token", "optimization", "compression", "claude-code", "gemini",
    "codex", "prompt-compression", "cost-reduction", "ai", "skill", "caveman"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai    = ["openai>=1.0.0", "tiktoken>=0.7.0"]
spark     = ["pyspark>=3.4.0"]
ml        = ["llmlingua>=0.2.0", "torch>=2.0.0", "transformers>=4.40.0"]
all       = ["anthropic>=0.40.0", "openai>=1.0.0", "tiktoken>=0.7.0", "pyspark>=3.4.0"]
dev       = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "tiktoken>=0.7.0",
]

# CLI commands — both work after pip install
[project.scripts]
tokenoptim     = "tokenoptim.cli:main"
llm-tokenoptim = "tokenoptim.cli:main"

[project.urls]
Homepage      = "https://github.com/Manas470/tokenoptim"
Repository    = "https://github.com/Manas470/tokenoptim"
"Bug Tracker" = "https://github.com/Manas470/tokenoptim/issues"

[tool.hatch.build.targets.wheel]
packages  = ["src/tokenoptim"]
artifacts = ["skills", "bin", "CLAUDE.md"]

[tool.hatch.build.targets.sdist]
include = ["src", "skills", "bin", "CLAUDE.md", "tests", "benchmarks",
           "README.md", "LICENSE", "CHANGELOG.md", "CONTRIBUTING.md"]

[tool.ruff]
line-length    = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version      = "3.11"
strict              = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "--tb=short -q"
asyncio_mode = "auto"
